# etas-midi2cv-firmware

./: Cargo.toml  memory.x  rustfmt.toml
.cargo/: config.toml
src/: binary_display.rs  button.rs  display.rs  interrupt.rs  main.rs  modes.rs  outputs.rs  settings.rs
