[package]
name = "rust-stm32f103c8-template"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

embedded-hal = "0.2.7"
embedded-time = "0.12.1"

stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f103", "medium"] }

panic-probe = { version = "0.3.0", features = ["print-rtt"] }
