[package]
name = "etas-midi2cv-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

embedded-hal = "0.2.7"

stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f103", "medium"] }

panic-probe = { version = "0.3.0", features = ["print-rtt"] }

embedded-midi = "0.1.2"

fixed = "1.15.0"
cordic = "0.1.5"

fugit = "0.3.5"
dwt-systick-monotonic = { git = "https://github.com/rtic-rs/dwt-systick-monotonic", features = ["extend"] }
rtic-monotonic = "1.0.0"

mcp49xx = "0.3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 2
debug = true
lto = true
codegen-units = 1
